Fixed issue with footer not sticking to bottom.
If the height of <article> was too short, the footer wouldn't always be
attached to bottom of the webpage.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,300);
 
+
 body {
     background-color: #191919;
     margin: 0 !important;
@@ -7,6 +8,8 @@ body {
     padding: 0 !important;
     height: 100% !important;
     text-align: center;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 article {
@@ -20,6 +23,12 @@ article {
     display: inline-block;
     text-align: left;
     border-radius: 10px;
+    margin-bottom: 130px;
+}
+
+#wrapper {
+    min-height: 100%;
+    position: relative;
 }
 
 header {
@@ -37,6 +46,11 @@ footer {
     color: white;
     text-align: left;
     font-family: "Ubuntu";
+	width: 100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
 }
 
 h1 {
